syntax = "proto3";

package apex.v1;

option go_package = "github.com/evstack/apex/pkg/api/grpc/gen;gen";

import "apex/v1/types.proto";

// BlobService provides access to indexed blobs.
service BlobService {
  // Get returns a single blob matching the namespace and commitment at the given height.
  rpc Get(GetBlobRequest) returns (Blob);

  // GetAll returns all blobs for the given namespaces at the given height.
  rpc GetAll(GetAllBlobsRequest) returns (GetAllBlobsResponse);

  // Subscribe streams blob events for the given namespaces.
  rpc Subscribe(SubscribeBlobsRequest) returns (stream BlobEvent);
}

message GetBlobRequest {
  uint64 height = 1;
  bytes namespace = 2;
  bytes commitment = 3;
}

message GetAllBlobsRequest {
  uint64 height = 1;
  repeated bytes namespaces = 2;
}

message GetAllBlobsResponse {
  repeated Blob blobs = 1;
}

message SubscribeBlobsRequest {
  repeated bytes namespaces = 1;
}

message BlobEvent {
  uint64 height = 1;
  repeated Blob blobs = 2;
}
